CMMP/base_antlr/cmmpParser.cpp

// Generated from base_antlr/cmmp.g4 by ANTLR 4.7.1


#include "cmmpListener.h"
#include "cmmpVisitor.h"

#include "cmmpParser.h"


using namespace antlrcpp;
using namespace antlr4;

cmmpParser::cmmpParser(TokenStream *input) : Parser(input) {
  _interpreter = new atn::ParserATNSimulator(this, _atn, _decisionToDFA, _sharedContextCache);
}

cmmpParser::~cmmpParser() {
  delete _interpreter;
}

std::string cmmpParser::getGrammarFileName() const {
  return "cmmp.g4";
}

const std::vector<std::string>& cmmpParser::getRuleNames() const {
  return _ruleNames;
}

dfa::Vocabulary& cmmpParser::getVocabulary() const {
  return _vocabulary;
}


//----------------- AxiomeContext ------------------------------------------------------------------

cmmpParser::AxiomeContext::AxiomeContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

cmmpParser::ProgrammeContext* cmmpParser::AxiomeContext::programme() {
  return getRuleContext<cmmpParser::ProgrammeContext>(0);
}


size_t cmmpParser::AxiomeContext::getRuleIndex() const {
  return cmmpParser::RuleAxiome;
}

void cmmpParser::AxiomeContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<cmmpListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterAxiome(this);
}

void cmmpParser::AxiomeContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<cmmpListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitAxiome(this);
}


antlrcpp::Any cmmpParser::AxiomeContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<cmmpVisitor*>(visitor))
    return parserVisitor->visitAxiome(this);
  else
    return visitor->visitChildren(this);
}

cmmpParser::AxiomeContext* cmmpParser::axiome() {
  AxiomeContext *_localctx = _tracker.createInstance<AxiomeContext>(_ctx, getState());
  enterRule(_localctx, 0, cmmpParser::RuleAxiome);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(46);
    programme();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ProgrammeContext ------------------------------------------------------------------

cmmpParser::ProgrammeContext::ProgrammeContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t cmmpParser::ProgrammeContext::getRuleIndex() const {
  return cmmpParser::RuleProgramme;
}

void cmmpParser::ProgrammeContext::copyFrom(ProgrammeContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- DeclVarContext ------------------------------------------------------------------

cmmpParser::DeclarationVarListeContext* cmmpParser::DeclVarContext::declarationVarListe() {
  return getRuleContext<cmmpParser::DeclarationVarListeContext>(0);
}

cmmpParser::ProgrammeContext* cmmpParser::DeclVarContext::programme() {
  return getRuleContext<cmmpParser::ProgrammeContext>(0);
}

cmmpParser::DeclVarContext::DeclVarContext(ProgrammeContext *ctx) { copyFrom(ctx); }

void cmmpParser::DeclVarContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<cmmpListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterDeclVar(this);
}
void cmmpParser::DeclVarContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<cmmpListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitDeclVar(this);
}

antlrcpp::Any cmmpParser::DeclVarContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<cmmpVisitor*>(visitor))
    return parserVisitor->visitDeclVar(this);
  else
    return visitor->visitChildren(this);
}
//----------------- DefFoncContext ------------------------------------------------------------------

cmmpParser::DefinitionFonctionContext* cmmpParser::DefFoncContext::definitionFonction() {
  return getRuleContext<cmmpParser::DefinitionFonctionContext>(0);
}

cmmpParser::ProgrammeContext* cmmpParser::DefFoncContext::programme() {
  return getRuleContext<cmmpParser::ProgrammeContext>(0);
}

cmmpParser::DefFoncContext::DefFoncContext(ProgrammeContext *ctx) { copyFrom(ctx); }

void cmmpParser::DefFoncContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<cmmpListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterDefFonc(this);
}
void cmmpParser::DefFoncContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<cmmpListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitDefFonc(this);
}

antlrcpp::Any cmmpParser::DefFoncContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<cmmpVisitor*>(visitor))
    return parserVisitor->visitDefFonc(this);
  else
    return visitor->visitChildren(this);
}
//----------------- EofContext ------------------------------------------------------------------

cmmpParser::EofContext::EofContext(ProgrammeContext *ctx) { copyFrom(ctx); }

void cmmpParser::EofContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<cmmpListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterEof(this);
}
void cmmpParser::EofContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<cmmpListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitEof(this);
}

antlrcpp::Any cmmpParser::EofContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<cmmpVisitor*>(visitor))
    return parserVisitor->visitEof(this);
  else
    return visitor->visitChildren(this);
}
cmmpParser::ProgrammeContext* cmmpParser::programme() {
  ProgrammeContext *_localctx = _tracker.createInstance<ProgrammeContext>(_ctx, getState());
  enterRule(_localctx, 2, cmmpParser::RuleProgramme);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(55);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 0, _ctx)) {
    case 1: {
      _localctx = dynamic_cast<ProgrammeContext *>(_tracker.createInstance<cmmpParser::DeclVarContext>(_localctx));
      enterOuterAlt(_localctx, 1);
      setState(48);
      declarationVarListe();
      setState(49);
      programme();
      break;
    }

    case 2: {
      _localctx = dynamic_cast<ProgrammeContext *>(_tracker.createInstance<cmmpParser::DefFoncContext>(_localctx));
      enterOuterAlt(_localctx, 2);
      setState(51);
      definitionFonction();
      setState(52);
      programme();
      break;
    }

    case 3: {
      _localctx = dynamic_cast<ProgrammeContext *>(_tracker.createInstance<cmmpParser::EofContext>(_localctx));
      enterOuterAlt(_localctx, 3);

      break;
    }

    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- BlockContext ------------------------------------------------------------------

cmmpParser::BlockContext::BlockContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<cmmpParser::InstructionContext *> cmmpParser::BlockContext::instruction() {
  return getRuleContexts<cmmpParser::InstructionContext>();
}

cmmpParser::InstructionContext* cmmpParser::BlockContext::instruction(size_t i) {
  return getRuleContext<cmmpParser::InstructionContext>(i);
}


size_t cmmpParser::BlockContext::getRuleIndex() const {
  return cmmpParser::RuleBlock;
}

void cmmpParser::BlockContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<cmmpListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterBlock(this);
}

void cmmpParser::BlockContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<cmmpListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitBlock(this);
}


antlrcpp::Any cmmpParser::BlockContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<cmmpVisitor*>(visitor))
    return parserVisitor->visitBlock(this);
  else
    return visitor->visitChildren(this);
}

cmmpParser::BlockContext* cmmpParser::block() {
  BlockContext *_localctx = _tracker.createInstance<BlockContext>(_ctx, getState());
  enterRule(_localctx, 4, cmmpParser::RuleBlock);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(57);
    match(cmmpParser::T__0);
    setState(61);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << cmmpParser::T__0)
      | (1ULL << cmmpParser::T__5)
      | (1ULL << cmmpParser::T__7)
      | (1ULL << cmmpParser::T__9)
      | (1ULL << cmmpParser::T__10)
      | (1ULL << cmmpParser::T__11)
      | (1ULL << cmmpParser::T__12)
      | (1ULL << cmmpParser::T__21)
      | (1ULL << cmmpParser::T__22)
      | (1ULL << cmmpParser::Cst)
      | (1ULL << cmmpParser::Type)
      | (1ULL << cmmpParser::Var))) != 0)) {
      setState(58);
      instruction();
      setState(63);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(64);
    match(cmmpParser::T__1);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- DeclarationVarListeContext ------------------------------------------------------------------

cmmpParser::DeclarationVarListeContext::DeclarationVarListeContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* cmmpParser::DeclarationVarListeContext::Type() {
  return getToken(cmmpParser::Type, 0);
}

std::vector<cmmpParser::DeclarationVarContext *> cmmpParser::DeclarationVarListeContext::declarationVar() {
  return getRuleContexts<cmmpParser::DeclarationVarContext>();
}

cmmpParser::DeclarationVarContext* cmmpParser::DeclarationVarListeContext::declarationVar(size_t i) {
  return getRuleContext<cmmpParser::DeclarationVarContext>(i);
}


size_t cmmpParser::DeclarationVarListeContext::getRuleIndex() const {
  return cmmpParser::RuleDeclarationVarListe;
}

void cmmpParser::DeclarationVarListeContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<cmmpListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterDeclarationVarListe(this);
}

void cmmpParser::DeclarationVarListeContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<cmmpListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitDeclarationVarListe(this);
}


antlrcpp::Any cmmpParser::DeclarationVarListeContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<cmmpVisitor*>(visitor))
    return parserVisitor->visitDeclarationVarListe(this);
  else
    return visitor->visitChildren(this);
}

cmmpParser::DeclarationVarListeContext* cmmpParser::declarationVarListe() {
  DeclarationVarListeContext *_localctx = _tracker.createInstance<DeclarationVarListeContext>(_ctx, getState());
  enterRule(_localctx, 6, cmmpParser::RuleDeclarationVarListe);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(66);
    match(cmmpParser::Type);
    setState(67);
    declarationVar();
    setState(72);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == cmmpParser::T__2) {
      setState(68);
      match(cmmpParser::T__2);
      setState(69);
      declarationVar();
      setState(74);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(75);
    match(cmmpParser::T__3);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- DeclarationVarContext ------------------------------------------------------------------

cmmpParser::DeclarationVarContext::DeclarationVarContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t cmmpParser::DeclarationVarContext::getRuleIndex() const {
  return cmmpParser::RuleDeclarationVar;
}

void cmmpParser::DeclarationVarContext::copyFrom(DeclarationVarContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- TabVarContext ------------------------------------------------------------------

cmmpParser::VarTableauContext* cmmpParser::TabVarContext::varTableau() {
  return getRuleContext<cmmpParser::VarTableauContext>(0);
}

cmmpParser::TabVarContext::TabVarContext(DeclarationVarContext *ctx) { copyFrom(ctx); }

void cmmpParser::TabVarContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<cmmpListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterTabVar(this);
}
void cmmpParser::TabVarContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<cmmpListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitTabVar(this);
}

antlrcpp::Any cmmpParser::TabVarContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<cmmpVisitor*>(visitor))
    return parserVisitor->visitTabVar(this);
  else
    return visitor->visitChildren(this);
}
//----------------- SimpleVarContext ------------------------------------------------------------------

cmmpParser::VarSimpleContext* cmmpParser::SimpleVarContext::varSimple() {
  return getRuleContext<cmmpParser::VarSimpleContext>(0);
}

cmmpParser::SimpleVarContext::SimpleVarContext(DeclarationVarContext *ctx) { copyFrom(ctx); }

void cmmpParser::SimpleVarContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<cmmpListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterSimpleVar(this);
}
void cmmpParser::SimpleVarContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<cmmpListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitSimpleVar(this);
}

antlrcpp::Any cmmpParser::SimpleVarContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<cmmpVisitor*>(visitor))
    return parserVisitor->visitSimpleVar(this);
  else
    return visitor->visitChildren(this);
}
cmmpParser::DeclarationVarContext* cmmpParser::declarationVar() {
  DeclarationVarContext *_localctx = _tracker.createInstance<DeclarationVarContext>(_ctx, getState());
  enterRule(_localctx, 8, cmmpParser::RuleDeclarationVar);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(79);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 3, _ctx)) {
    case 1: {
      _localctx = dynamic_cast<DeclarationVarContext *>(_tracker.createInstance<cmmpParser::SimpleVarContext>(_localctx));
      enterOuterAlt(_localctx, 1);
      setState(77);
      varSimple();
      break;
    }

    case 2: {
      _localctx = dynamic_cast<DeclarationVarContext *>(_tracker.createInstance<cmmpParser::TabVarContext>(_localctx));
      enterOuterAlt(_localctx, 2);
      setState(78);
      varTableau();
      break;
    }

    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- VarSimpleContext ------------------------------------------------------------------

cmmpParser::VarSimpleContext::VarSimpleContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* cmmpParser::VarSimpleContext::Var() {
  return getToken(cmmpParser::Var, 0);
}

cmmpParser::ExprContext* cmmpParser::VarSimpleContext::expr() {
  return getRuleContext<cmmpParser::ExprContext>(0);
}


size_t cmmpParser::VarSimpleContext::getRuleIndex() const {
  return cmmpParser::RuleVarSimple;
}

void cmmpParser::VarSimpleContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<cmmpListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterVarSimple(this);
}

void cmmpParser::VarSimpleContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<cmmpListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitVarSimple(this);
}


antlrcpp::Any cmmpParser::VarSimpleContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<cmmpVisitor*>(visitor))
    return parserVisitor->visitVarSimple(this);
  else
    return visitor->visitChildren(this);
}

cmmpParser::VarSimpleContext* cmmpParser::varSimple() {
  VarSimpleContext *_localctx = _tracker.createInstance<VarSimpleContext>(_ctx, getState());
  enterRule(_localctx, 10, cmmpParser::RuleVarSimple);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(81);
    match(cmmpParser::Var);
    setState(84);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == cmmpParser::T__4) {
      setState(82);
      match(cmmpParser::T__4);
      setState(83);
      expr(0);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- VarTableauContext ------------------------------------------------------------------

cmmpParser::VarTableauContext::VarTableauContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

cmmpParser::VarTabContext* cmmpParser::VarTableauContext::varTab() {
  return getRuleContext<cmmpParser::VarTabContext>(0);
}

cmmpParser::EListeContext* cmmpParser::VarTableauContext::eListe() {
  return getRuleContext<cmmpParser::EListeContext>(0);
}


size_t cmmpParser::VarTableauContext::getRuleIndex() const {
  return cmmpParser::RuleVarTableau;
}

void cmmpParser::VarTableauContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<cmmpListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterVarTableau(this);
}

void cmmpParser::VarTableauContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<cmmpListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitVarTableau(this);
}


antlrcpp::Any cmmpParser::VarTableauContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<cmmpVisitor*>(visitor))
    return parserVisitor->visitVarTableau(this);
  else
    return visitor->visitChildren(this);
}

cmmpParser::VarTableauContext* cmmpParser::varTableau() {
  VarTableauContext *_localctx = _tracker.createInstance<VarTableauContext>(_ctx, getState());
  enterRule(_localctx, 12, cmmpParser::RuleVarTableau);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(86);
    varTab();
    setState(92);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == cmmpParser::T__4) {
      setState(87);
      match(cmmpParser::T__4);
      setState(88);
      match(cmmpParser::T__0);
      setState(89);
      eListe();
      setState(90);
      match(cmmpParser::T__1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- DefinitionFonctionContext ------------------------------------------------------------------

cmmpParser::DefinitionFonctionContext::DefinitionFonctionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* cmmpParser::DefinitionFonctionContext::Type() {
  return getToken(cmmpParser::Type, 0);
}

tree::TerminalNode* cmmpParser::DefinitionFonctionContext::Var() {
  return getToken(cmmpParser::Var, 0);
}

cmmpParser::BlockContext* cmmpParser::DefinitionFonctionContext::block() {
  return getRuleContext<cmmpParser::BlockContext>(0);
}

cmmpParser::ParamDefinitionListContext* cmmpParser::DefinitionFonctionContext::paramDefinitionList() {
  return getRuleContext<cmmpParser::ParamDefinitionListContext>(0);
}


size_t cmmpParser::DefinitionFonctionContext::getRuleIndex() const {
  return cmmpParser::RuleDefinitionFonction;
}

void cmmpParser::DefinitionFonctionContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<cmmpListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterDefinitionFonction(this);
}

void cmmpParser::DefinitionFonctionContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<cmmpListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitDefinitionFonction(this);
}


antlrcpp::Any cmmpParser::DefinitionFonctionContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<cmmpVisitor*>(visitor))
    return parserVisitor->visitDefinitionFonction(this);
  else
    return visitor->visitChildren(this);
}

cmmpParser::DefinitionFonctionContext* cmmpParser::definitionFonction() {
  DefinitionFonctionContext *_localctx = _tracker.createInstance<DefinitionFonctionContext>(_ctx, getState());
  enterRule(_localctx, 14, cmmpParser::RuleDefinitionFonction);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(94);
    match(cmmpParser::Type);
    setState(95);
    match(cmmpParser::Var);
    setState(96);
    match(cmmpParser::T__5);
    setState(98);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == cmmpParser::Type) {
      setState(97);
      paramDefinitionList();
    }
    setState(100);
    match(cmmpParser::T__6);
    setState(101);
    block();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ParamDefinitionListContext ------------------------------------------------------------------

cmmpParser::ParamDefinitionListContext::ParamDefinitionListContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<cmmpParser::ParamDefinitionContext *> cmmpParser::ParamDefinitionListContext::paramDefinition() {
  return getRuleContexts<cmmpParser::ParamDefinitionContext>();
}

cmmpParser::ParamDefinitionContext* cmmpParser::ParamDefinitionListContext::paramDefinition(size_t i) {
  return getRuleContext<cmmpParser::ParamDefinitionContext>(i);
}


size_t cmmpParser::ParamDefinitionListContext::getRuleIndex() const {
  return cmmpParser::RuleParamDefinitionList;
}

void cmmpParser::ParamDefinitionListContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<cmmpListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterParamDefinitionList(this);
}

void cmmpParser::ParamDefinitionListContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<cmmpListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitParamDefinitionList(this);
}


antlrcpp::Any cmmpParser::ParamDefinitionListContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<cmmpVisitor*>(visitor))
    return parserVisitor->visitParamDefinitionList(this);
  else
    return visitor->visitChildren(this);
}

cmmpParser::ParamDefinitionListContext* cmmpParser::paramDefinitionList() {
  ParamDefinitionListContext *_localctx = _tracker.createInstance<ParamDefinitionListContext>(_ctx, getState());
  enterRule(_localctx, 16, cmmpParser::RuleParamDefinitionList);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(103);
    paramDefinition();
    setState(108);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == cmmpParser::T__2) {
      setState(104);
      match(cmmpParser::T__2);
      setState(105);
      paramDefinition();
      setState(110);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ParamDefinitionContext ------------------------------------------------------------------

cmmpParser::ParamDefinitionContext::ParamDefinitionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* cmmpParser::ParamDefinitionContext::Type() {
  return getToken(cmmpParser::Type, 0);
}

tree::TerminalNode* cmmpParser::ParamDefinitionContext::Var() {
  return getToken(cmmpParser::Var, 0);
}


size_t cmmpParser::ParamDefinitionContext::getRuleIndex() const {
  return cmmpParser::RuleParamDefinition;
}

void cmmpParser::ParamDefinitionContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<cmmpListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterParamDefinition(this);
}

void cmmpParser::ParamDefinitionContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<cmmpListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitParamDefinition(this);
}


antlrcpp::Any cmmpParser::ParamDefinitionContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<cmmpVisitor*>(visitor))
    return parserVisitor->visitParamDefinition(this);
  else
    return visitor->visitChildren(this);
}

cmmpParser::ParamDefinitionContext* cmmpParser::paramDefinition() {
  ParamDefinitionContext *_localctx = _tracker.createInstance<ParamDefinitionContext>(_ctx, getState());
  enterRule(_localctx, 18, cmmpParser::RuleParamDefinition);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(111);
    match(cmmpParser::Type);
    setState(113);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == cmmpParser::Var) {
      setState(112);
      match(cmmpParser::Var);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- StructureControlContext ------------------------------------------------------------------

cmmpParser::StructureControlContext::StructureControlContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t cmmpParser::StructureControlContext::getRuleIndex() const {
  return cmmpParser::RuleStructureControl;
}

void cmmpParser::StructureControlContext::copyFrom(StructureControlContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- ControlwhileContext ------------------------------------------------------------------

cmmpParser::ExprContext* cmmpParser::ControlwhileContext::expr() {
  return getRuleContext<cmmpParser::ExprContext>(0);
}

cmmpParser::InstructionContext* cmmpParser::ControlwhileContext::instruction() {
  return getRuleContext<cmmpParser::InstructionContext>(0);
}

cmmpParser::ControlwhileContext::ControlwhileContext(StructureControlContext *ctx) { copyFrom(ctx); }

void cmmpParser::ControlwhileContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<cmmpListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterControlwhile(this);
}
void cmmpParser::ControlwhileContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<cmmpListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitControlwhile(this);
}

antlrcpp::Any cmmpParser::ControlwhileContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<cmmpVisitor*>(visitor))
    return parserVisitor->visitControlwhile(this);
  else
    return visitor->visitChildren(this);
}
//----------------- ControlifContext ------------------------------------------------------------------

cmmpParser::ExprContext* cmmpParser::ControlifContext::expr() {
  return getRuleContext<cmmpParser::ExprContext>(0);
}

std::vector<cmmpParser::InstructionContext *> cmmpParser::ControlifContext::instruction() {
  return getRuleContexts<cmmpParser::InstructionContext>();
}

cmmpParser::InstructionContext* cmmpParser::ControlifContext::instruction(size_t i) {
  return getRuleContext<cmmpParser::InstructionContext>(i);
}

cmmpParser::ControlifContext::ControlifContext(StructureControlContext *ctx) { copyFrom(ctx); }
